--- a/src/functions/split-property.scss
+++ b/src/functions/split-property.scss
@@ -1,15 +1,15 @@
 @import '../utilities/str-split';
-@import '../utilities/to-string';
+@import '../utilities/join';
 @import '../utilities/slice';
 
-@function split-css-property($css-property) {
+@function split-property($css-property) {
   $sections: str-split($css-property, '-');
 
   @if length($sections) == 1 {
-    @return (nth($sections, 1), '');
+    @return (nth($sections, 1), null);
   } @else if length($sections) == 2 {
     @return (nth($sections, 1), nth($sections, 2));
   } @else {
-    @return (nth($sections, 1), to-string(slice($sections, 2), '-'));
+    @return (nth($sections, 1), join(slice($sections, 2), '-'));
   }
 }
