--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
 @import './config';
 @import './utilities/starts-with';
+@import './utilities/ends-with';
 @import './functions/has-variant';
-@import './mixins/css-rule';
+
+@import './mixins/base-declaration';
 @import './mixins/hover-variant';
 @import './mixins/focus-variant';
 @import './mixins/group-hover-variant';
@@ -15,64 +17,129 @@
 @import './extensions/scrolling';
 @import './extensions/truncate';
 
-@if index(map-get($config, '_mixins'), 'clearfix') {
-  @include clearfix;
-}
-@if index(map-get($config, '_mixins'), 'container') {
-  @include container;
-}
-@if index(map-get($config, '_mixins'), 'lists') {
-  @include lists;
-}
-@if index(map-get($config, '_mixins'), 'pin') {
-  @include pin;
-}
-@if index(map-get($config, '_mixins'), 'scrolling') {
-  @include scrolling;
-}
-@if index(map-get($config, '_mixins'), 'truncate') {
-  @include truncate;
+@mixin extensions($config) {
+  @if index(map-get($config, '_extensions'), 'clearfix') {
+    @include clearfix($config);
+  }
+  @if index(map-get($config, '_extensions'), 'container') {
+    @include container($config);
+  }
+  @if index(map-get($config, '_extensions'), 'lists') {
+    @include lists($config);
+  }
+  @if index(map-get($config, '_extensions'), 'pin') {
+    @include pin($config);
+  }
+  @if index(map-get($config, '_extensions'), 'scrolling') {
+    @include scrolling($config);
+  }
+  @if index(map-get($config, '_extensions'), 'truncate') {
+    @include truncate($config);
+  }
 }
 
-@each $property, $map in $config {
-  @if starts-with($property, '_') {}
-  @else if $property {
-    $namespace: map-get($map, 'class-namespace');
-    $options: map-get($map, 'class-options');
-    $is-responsive: has-variant($map, 'state-variants', 'responsive');
+// TAKES ONE UTILITY-OBJECT AND OUTPUTS ALL UTILTITY CLASSES (+ VARIANTS)
+@mixin utility-with-variants($utility-obj, $property-config, $responsive-screen-alias: null) {
+  @include base-declaration($utility-obj,
+                            $responsive-screen-alias);
 
-    @each $alias, $value in $options {
-      $rule: (
-        declaration: (
-          property: $property,
-          value: $value,
-        ),
-        class: (
-          namespace: $namespace,
-          alias: $alias,
-        ),
-      );
+  @if has-variant($property-config, 'state-variants', 'hover') {
+    @include hover-variant($utility-obj,
+                           $responsive-screen-alias);
+  }
 
-      @include css-rule($rule, $is-responsive);
+  @if has-variant($property-config, 'state-variants', 'focus') {
+    @include focus-variant($utility-obj,
+                           $responsive-screen-alias);
+  }
 
-      @if has-variant($map, 'state-variants', 'hover') {
-        @include hover-variant($rule, $is-responsive);
+  @if has-variant($property-config, 'state-variants', 'group-hover') {
+    @include group-hover-variant($utility-obj,
+                                 $responsive-screen-alias);
+  }
+
+  @if has-variant($property-config, 'property-variants', 'sides') {
+    @include side-variants($utility-obj,
+                           map-get($sasswind-config, '_sides'),
+                           $responsive-screen-alias);
+  }
+
+  @if has-variant($property-config, 'property-variants', 'corners') {
+    @include corner-variants($utility-obj,
+                             map-get($sasswind-config, '_corners'),
+                             $responsive-screen-alias);
+  }
+}
+
+// TAKES ONE PROPERTY-OBJECT AND OUTPUTS ALL UTILTITY CLASSES (+ VARIANTS) FOR ALL CLASS OPTIONS
+@mixin property-group($property-name, $property-config, $responsive-screen-alias: null) {
+  @each $class-alias, $property-value in map-get($property-config, 'class-options') {
+    $utility-obj: (
+      declaration-property: $property-name,
+      declaration-value: $property-value,
+      selector-namespace: map-get($property-config, 'class-namespace'),
+      selector-alias: $class-alias,
+    );
+
+    @include utility-with-variants($utility-obj,
+                                   $property-config,
+                                   $responsive-screen-alias);
+  }
+}
+
+// PUBLIC API MIXINS
+@mixin apply($selector) {
+  @each $property-name, $property-config in $sasswind-config {
+    @if not starts-with($property-name, '_') {
+      $namespace : map-get($property-config, 'class-namespace');
+
+      @if starts-with($selector, $namespace) {
+        @each $class-alias, $property-value in map-get($property-config, 'class-options') {
+          @if ends-with($selector, $class-alias) {
+            $utility-obj : (
+              declaration-property: $property-name,
+              declaration-value: $property-value,
+              selector-namespace: map-get($property-config, 'class-namespace'),
+              selector-alias: $class-alias,
+            );
+            $option-selector : base-declaration-selector($utility-obj);
+
+            @if $selector == $option-selector {
+              $property  : base-declaration-property($utility-obj);
+              $value     : map-get($utility-obj, 'declaration-value');
+
+              #{$property}: #{$value}
+            }
+          }
+        }
       }
+    }
+  }
+}
 
-      @if has-variant($map, 'state-variants', 'focus') {
-        @include focus-variant($rule, $is-responsive);
-      }
+@mixin tailwind-utilities {
+  @include extensions($sasswind-config);
 
-      @if has-variant($map, 'state-variants', 'group-hover') {
-        @include group-hover-variant($rule, $is-responsive);
-      }
+  @each $property-name, $property-config in $sasswind-config {
+    @if not starts-with($property-name, '_') {
+      @include property-group($property-name, $property-config);
+    }
+  }
 
-      @if has-variant($map, 'property-variants', 'corners') {
-        @include corner-variants($rule, $is-responsive);
-      }
+  @each $screen-alias, $screen-width in map-get($sasswind-config, '_screens') {
+    @media (min-width: #{$screen-width}) {
+      @each $property-name, $property-config in $sasswind-config {
+        @if not starts-with($property-name, '_') {
+          $is-responsive: has-variant($property-config,
+                                      'state-variants',
+                                      'responsive');
 
-      @if has-variant($map, 'property-variants', 'sides') {
-        @include side-variants($rule, $is-responsive);
+          @if $is-responsive {
+            @include property-group($property-name,
+                                    $property-config,
+                                    $screen-alias);
+          }
+        }
       }
     }
   }
