--- a/src/mixins/base-declaration.scss
+++ b/src/mixins/base-declaration.scss
@@ -1,22 +1,19 @@
 @import '../functions/base-declaration-property';
 @import '../functions/base-declaration-selector';
-@import '../utilities/join';
 @import '../utilities/escape-css';
+@import '../utilities/join';
 
-@mixin group-hover-variant($utility-obj, $responsive-screen-alias: null) {
+@mixin base-declaration($utility-obj, $responsive-screen-alias: null) {
   $property  : base-declaration-property($utility-obj);
   $selector  : base-declaration-selector($utility-obj);
   $value     : map-get($utility-obj, 'declaration-value');
-
-  $context   : 'group:hover';
-  $selector  : escape-css('group-hover:#{$selector}');
 
   @if $responsive-screen-alias {
     $screen-namespace : escape-css('#{$responsive-screen-alias}:');
     $selector         : join(($screen-namespace, $selector));
   }
 
-  .#{$context} .#{$selector} {
+  .#{$selector} {
     #{$property}: #{$value}
   }
 }
